// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ruleCanOnlyBeValue: easy mode 1`] = `
"1    ┌─┐  ┌─┐  ┃  ┌─┐  1     2   ┃  ┌─┐  ┌─┐   2 
     │4│  │5│  ┃  │9│    6       ┃  │3│  │8│     
     └─┘  └─┘  ┃  └─┘            ┃  └─┘  └─┘  7  
               ┃                 ┃               
┌─┐    3    3  ┃  1    1     2   ┃       ┌─┐   2 
│6│            ┃        5    5   ┃  4    │9│     
└─┘  7         ┃        8    8   ┃  7    └─┘  7  
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  1    ┌─┐
│2│  │9│  │8│  ┃  │3│  │7│  │4│  ┃  │5│       │6│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘       └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃       ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│5│  │1│  │7│  ┃  4    │9│  │6│  ┃  │8│  │2│  │3│
└─┘  └─┘  └─┘  ┃       └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
  3    3    3  ┃  ┌─┐  1      3  ┃       ┌─┐  ┌─┐
            6  ┃  │2│            ┃       │5│  │4│
  9         9  ┃  └─┘   8    8   ┃  7    └─┘  └─┘
               ┃                 ┃               
┌─┐   23  ┌─┐  ┃  ┌─┐         3  ┃  ┌─┐  ┌─┐  ┌─┐
│8│       │4│  ┃  │7│   5    5   ┃  │1│  │6│  │9│
└─┘       └─┘  ┃  └─┘            ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│7│  │6│  │2│  ┃  │5│  │3│  │1│  ┃  │9│  │4│  │8│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐            ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│4│   5        ┃  │8│  │2│  │7│  ┃  │6│  │3│  │1│
└─┘         9  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
  3  ┌─┐  ┌─┐  ┃            ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
     │8│  │1│  ┃  4 6  4 6  │9│  ┃  │2│  │7│  │5│
     └─┘  └─┘  ┃            └─┘  ┃  └─┘  └─┘  └─┘"
`;

exports[`ruleCanOnlyBeValue: easy mode complete 1`] = `
"┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│1│  │4│  │5│  ┃  │9│  │6│  │2│  ┃  │3│  │8│  │7│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│6│  │7│  │3│  ┃  │1│  │8│  │5│  ┃  │4│  │9│  │2│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│2│  │9│  │8│  ┃  │3│  │7│  │4│  ┃  │5│  │1│  │6│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│5│  │1│  │7│  ┃  │4│  │9│  │6│  ┃  │8│  │2│  │3│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│9│  │3│  │6│  ┃  │2│  │1│  │8│  ┃  │7│  │5│  │4│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│8│  │2│  │4│  ┃  │7│  │5│  │3│  ┃  │1│  │6│  │9│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│7│  │6│  │2│  ┃  │5│  │3│  │1│  ┃  │9│  │4│  │8│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│4│  │5│  │9│  ┃  │8│  │2│  │7│  ┃  │6│  │3│  │1│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│3│  │8│  │1│  ┃  │6│  │4│  │9│  ┃  │2│  │7│  │5│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘"
`;

exports[`ruleCanOnlyBeValue: empty board 1`] = `
"123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789"
`;

exports[`ruleCanOnlyBeValue: full row 1`] = `
"┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│1│  │2│  │3│  ┃  │4│  │5│  │6│  ┃  │7│  │8│  │9│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
               ┃  123  123  123  ┃  123  123  123
456  456  456  ┃                 ┃  456  456  456
789  789  789  ┃  789  789  789  ┃               
               ┃                 ┃               
               ┃  123  123  123  ┃  123  123  123
456  456  456  ┃                 ┃  456  456  456
789  789  789  ┃  789  789  789  ┃               
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃   56  4 6  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃   89  7 9  78 
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃   56  4 6  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃   89  7 9  78 
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃   56  4 6  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃   89  7 9  78 
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃   56  4 6  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃   89  7 9  78 
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃   56  4 6  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃   89  7 9  78 
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃   56  4 6  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃   89  7 9  78 "
`;

exports[`ruleCanOnlyBeValue: hard board stuck 1`] = `
"1 3   23  123  ┃  ┌─┐  12   12   ┃  123  1 3   23
 5    56   56  ┃  │4│    6    6  ┃        5    5 
789  7 9  7 9  ┃  └─┘    9  7    ┃       7    7  
               ┃                 ┃               
1 3   23  123  ┃   2   12   ┌─┐  ┃  123  ┌─┐  ┌─┐
 5    5   45   ┃            │8│  ┃       │9│  │6│
7    7    7    ┃  7         └─┘  ┃       └─┘  └─┘
               ┃                 ┃               
1     2   12   ┃   2   ┌─┐  ┌─┐  ┃  12   ┌─┐   2 
       6  4 6  ┃    6  │5│  │3│  ┃       │8│  4  
7 9  7 9  7 9  ┃  7    └─┘  └─┘  ┃       └─┘  7  
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
1 3  ┌─┐  ┌─┐  ┃   23  123  12   ┃   23    3   23
 5   │4│  │8│  ┃   56    6   56  ┃    6    6     
7 9  └─┘  └─┘  ┃  7         7    ┃       7    7  
               ┃                 ┃               
┌─┐    3    3  ┃    3  ┌─┐  ┌─┐  ┃    3    3  ┌─┐
│2│   5    5   ┃   56  │4│  │9│  ┃    6    6  │1│
└─┘  7    7    ┃  78   └─┘  └─┘  ┃   8   7    └─┘
               ┃                 ┃               
┌─┐    3  1 3  ┃   23  123  12   ┃  ┌─┐    3  ┌─┐
│6│            ┃                 ┃  │5│  4    │9│
└─┘  7    7    ┃  78    8   7    ┃  └─┘  7    └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐   23   23  ┃  ┌─┐   23   2   ┃  ┌─┐    3    3
│4│   56   56  ┃  │1│    6   56  ┃  │7│   56   5 
└─┘    9    9  ┃  └─┘   8        ┃  └─┘        8 
               ┃                 ┃               
  3  ┌─┐   23  ┃  ┌─┐   23   2   ┃  ┌─┐  1 3    3
 5   │8│   56  ┃  │9│    6   56  ┃  │4│   56   5 
7    └─┘  7    ┃  └─┘            ┃  └─┘          
               ┃                 ┃               
  3  ┌─┐    3  ┃    3  ┌─┐       ┃    3  ┌─┐    3
 5   │1│   56  ┃   56  │7│  456  ┃    6  │2│   5 
  9  └─┘    9  ┃   8   └─┘       ┃   89  └─┘   8 "
`;

exports[`ruleCanOnlyBeValue: multiple gets in one go 1`] = `
"┌─┐  ┌─┐  ┌─┐  ┃                 ┃  ┌─┐  ┌─┐  ┌─┐
│1│  │2│  │3│  ┃  456  456  456  ┃  │7│  │8│  │9│
└─┘  └─┘  └─┘  ┃                 ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  123  123  123  ┃  123  123  123
│4│  │5│  │6│  ┃                 ┃               
└─┘  └─┘  └─┘  ┃  789  789  789  ┃               
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  123  123  123  ┃  ┌─┐  ┌─┐  ┌─┐
│7│  │8│  │9│  ┃                 ┃  │4│  │5│  │6│
└─┘  └─┘  └─┘  ┃                 ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
 56  4 6  45   ┃  456  456  456  ┃   56  4 6  45 
 89  7 9  78   ┃  789  789  789  ┃   89    9     
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
 56  4 6  45   ┃  456  456  456  ┃   56  4 6  45 
 89  7 9  78   ┃  789  789  789  ┃   89    9     
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  ┌─┐
 56  4 6  45   ┃  456  456  456  ┃   56  4 6  │7│
 89    9   8   ┃   89   89   89  ┃   89    9  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
 56  4 6  45   ┃  456  456  456  ┃   56  4 6  45 
 89  7 9  78   ┃  789  789  789  ┃    9  7 9     
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
 56  4 6  45   ┃  456  456  456  ┃   56  4 6  45 
 89  7 9  78   ┃  789  789  789  ┃    9  7 9     
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  ┌─┐
 56  4 6  45   ┃  456  456  456  ┃   56  4 6  │8│
  9  7 9  7    ┃  7 9  7 9  7 9  ┃    9  7 9  └─┘"
`;

exports[`ruleCanOnlyBeValue: three constraints 1`] = `
"┌─┐  ┌─┐  ┌─┐  ┃                 ┃            ┌─┐
│1│  │2│  │3│  ┃  456  456  456  ┃            │9│
└─┘  └─┘  └─┘  ┃  78   78   78   ┃  78   78   └─┘
               ┃                 ┃               
               ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃               
789  789  789  ┃  789  789  789  ┃  78   78      
               ┃                 ┃               
               ┃  123  123  123  ┃  ┌─┐  ┌─┐  ┌─┐
               ┃                 ┃  │4│  │5│  │6│
789  789  789  ┃  789  789  789  ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃   56  4 6  45 
789  789  789  ┃  789  789  789  ┃   89   89     
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃   56  4 6  45 
789  789  789  ┃  789  789  789  ┃   89   89     
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  ┌─┐
456  456  456  ┃  456  456  456  ┃   56  4 6  │7│
 89   89   89  ┃   89   89   89  ┃   89   89  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃   56  4 6  45 
789  789  789  ┃  789  789  789  ┃  7 9  7 9     
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃   56  4 6  45 
789  789  789  ┃  789  789  789  ┃  7 9  7 9     
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  ┌─┐
456  456  456  ┃  456  456  456  ┃   56  4 6  │8│
7 9  7 9  7 9  ┃  7 9  7 9  7 9  ┃  7 9  7 9  └─┘"
`;

exports[`ruleOnlyCellCanBeValue: [0, 2] = 3 1`] = `
"12   12   ┌─┐  ┃  12   12   12   ┃  12   12   12 
456  456  │3│  ┃  456  456  456  ┃  456  456  456
789  789  └─┘  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
12   12   12   ┃  12   12   12   ┃  12   12   ┌─┐
456  456  456  ┃  456  456  456  ┃  456  456  │3│
789  789  789  ┃  789  789  789  ┃  789  789  └─┘
               ┃                 ┃               
12   12   12   ┃  12   12   ┌─┐  ┃  12   12   12 
456  456  456  ┃  456  456  │3│  ┃  456  456  456
789  789  789  ┃  789  789  └─┘  ┃  789  789  789
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
12   ┌─┐  12   ┃  12   12   12   ┃  12   12   12 
456  │3│  456  ┃  456  456  456  ┃  456  456  456
789  └─┘  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
12   12   12   ┃  123  123  12   ┃  123  123  12 
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
12   12   12   ┃  123  123  12   ┃  123  123  12 
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  12   12   ┃  12   12   12   ┃  12   12   12 
│3│  456  456  ┃  456  456  456  ┃  456  456  456
└─┘  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
12   12   12   ┃  123  123  12   ┃  123  123  12 
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
12   12   12   ┃  123  123  12   ┃  123  123  12 
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789"
`;

exports[`ruleOnlyCellCanBeValue: easy board 1`] = `
"┌─┐  ┌─┐       ┃  ┌─┐  ┌─┐   2   ┃  ┌─┐  ┌─┐  ┌─┐
│1│  │4│   5   ┃  │9│  │6│   5   ┃  │3│  │8│  │7│
└─┘  └─┘       ┃  └─┘  └─┘       ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐    3  ┃  ┌─┐        2   ┃  ┌─┐  ┌─┐   2 
│6│  │7│   5   ┃  │1│        5   ┃  │4│  │9│     
└─┘  └─┘       ┃  └─┘   8    8   ┃  └─┘  └─┘     
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│2│  │9│  │8│  ┃  │3│  │7│  │4│  ┃  │5│  │1│  │6│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│5│  │1│  │7│  ┃  │4│  │9│  │6│  ┃  │8│  │2│  │3│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐    3  ┌─┐  ┃  ┌─┐  1         ┃  ┌─┐  ┌─┐  ┌─┐
│9│       │6│  ┃  │2│            ┃  │7│  │5│  │4│
└─┘       └─┘  ┃  └─┘   8    8   ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  1    ┌─┐  ┌─┐
│8│  │2│  │4│  ┃  │7│  │5│  │3│  ┃       │6│  │9│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃       └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│7│  │6│  │2│  ┃  │5│  │3│  │1│  ┃  │9│  │4│  │8│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐       ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│4│   5   │9│  ┃  │8│  │2│  │7│  ┃  │6│  │3│  │1│
└─┘       └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│3│  │8│  │1│  ┃  │6│  │4│  │9│  ┃  │2│  │7│  │5│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘"
`;

exports[`ruleOnlyCellCanBeValue: easy board complete 1`] = `
"┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│1│  │4│  │5│  ┃  │9│  │6│  │2│  ┃  │3│  │8│  │7│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│6│  │7│  │3│  ┃  │1│  │8│  │5│  ┃  │4│  │9│  │2│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│2│  │9│  │8│  ┃  │3│  │7│  │4│  ┃  │5│  │1│  │6│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│5│  │1│  │7│  ┃  │4│  │9│  │6│  ┃  │8│  │2│  │3│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│9│  │3│  │6│  ┃  │2│  │1│  │8│  ┃  │7│  │5│  │4│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│8│  │2│  │4│  ┃  │7│  │5│  │3│  ┃  │1│  │6│  │9│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│7│  │6│  │2│  ┃  │5│  │3│  │1│  ┃  │9│  │4│  │8│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│4│  │5│  │9│  ┃  │8│  │2│  │7│  ┃  │6│  │3│  │1│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│3│  │8│  │1│  ┃  │6│  │4│  │9│  ┃  │2│  │7│  │5│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘"
`;

exports[`ruleOnlyCellCanBeValue: hard board 1`] = `
"┌─┐   23  123  ┃  ┌─┐  ┌─┐  12   ┃  123    3   23
│8│   56   56  ┃  │4│  │9│    6  ┃        5    5 
└─┘  7    7    ┃  └─┘  └─┘  7    ┃       7    7  
               ┃                 ┃               
1 3   23  ┌─┐  ┃   2   12   ┌─┐  ┃  123  ┌─┐  ┌─┐
 5    5   │4│  ┃            │8│  ┃       │9│  │6│
7    7    └─┘  ┃  7         └─┘  ┃       └─┘  └─┘
               ┃                 ┃               
1     2   12   ┃   2   ┌─┐  ┌─┐  ┃  12   ┌─┐  ┌─┐
       6    6  ┃    6  │5│  │3│  ┃       │8│  │4│
7    7 9  7 9  ┃  7    └─┘  └─┘  ┃       └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃   23  123  12   ┃   23    3   23
│9│  │4│  │8│  ┃   56    6   56  ┃    6    6     
└─┘  └─┘  └─┘  ┃  7         7    ┃       7    7  
               ┃                 ┃               
┌─┐    3    3  ┃    3  ┌─┐  ┌─┐  ┃  ┌─┐    3  ┌─┐
│2│   5    5   ┃   56  │4│  │9│  ┃  │8│    6  │1│
└─┘  7    7    ┃  7    └─┘  └─┘  ┃  └─┘  7    └─┘
               ┃                 ┃               
┌─┐    3  1 3  ┃   23  123  12   ┃  ┌─┐  ┌─┐  ┌─┐
│6│            ┃                 ┃  │5│  │4│  │9│
└─┘  7    7    ┃  78    8   7    ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐   23   23  ┃  ┌─┐   23   2   ┃  ┌─┐    3    3
│4│   56   56  ┃  │1│    6   56  ┃  │7│   56   5 
└─┘    9    9  ┃  └─┘   8        ┃  └─┘        8 
               ┃                 ┃               
  3  ┌─┐   23  ┃  ┌─┐   23   2   ┃  ┌─┐  ┌─┐    3
 5   │8│   56  ┃  │9│    6   56  ┃  │4│  │1│   5 
7    └─┘  7    ┃  └─┘            ┃  └─┘  └─┘     
               ┃                 ┃               
  3  ┌─┐    3  ┃    3  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐    3
 5   │1│   56  ┃   56  │7│  │4│  ┃  │9│  │2│   5 
     └─┘       ┃   8   └─┘  └─┘  ┃  └─┘  └─┘   8 "
`;

exports[`ruleOnlyCellCanBeValue: hard board complete 1`] = `
"┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│8│  │2│  │3│  ┃  │4│  │9│  │6│  ┃  │1│  │5│  │7│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│7│  │5│  │4│  ┃  │2│  │1│  │8│  ┃  │3│  │9│  │6│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│1│  │6│  │9│  ┃  │7│  │5│  │3│  ┃  │2│  │8│  │4│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│9│  │4│  │8│  ┃  │5│  │3│  │1│  ┃  │6│  │7│  │2│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│2│  │7│  │5│  ┃  │6│  │4│  │9│  ┃  │8│  │3│  │1│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│6│  │3│  │1│  ┃  │8│  │2│  │7│  ┃  │5│  │4│  │9│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│4│  │9│  │2│  ┃  │1│  │8│  │5│  ┃  │7│  │6│  │3│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│3│  │8│  │7│  ┃  │9│  │6│  │2│  ┃  │4│  │1│  │5│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│5│  │1│  │6│  ┃  │3│  │7│  │4│  ┃  │9│  │2│  │8│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘"
`;

exports[`ruleOnlyCellCanBeValue: tough board 1`] = `
"  3   2    23  ┃  ┌─┐       ┌─┐  ┃    3          
               ┃  │1│    6  │4│  ┃   56   56    6
 89   89   89  ┃  └─┘   89  └─┘  ┃  78    89  7 9
               ┃                 ┃               
┌─┐  1    ┌─┐  ┃  ┌─┐            ┃    3  ┌─┐  ┌─┐
│6│       │7│  ┃  │5│            ┃       │2│  │4│
└─┘   89  └─┘  ┃  └─┘   89   89  ┃   8   └─┘  └─┘
               ┃                 ┃               
1    ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃            1  
     │5│  │4│  ┃  │3│  │2│  │7│  ┃    6    6    6
 89  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃   8    89    9
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
          ┌─┐  ┃   2   ┌─┐   2   ┃  ┌─┐  ┌─┐  ┌─┐
       6  │5│  ┃    6  │1│    6  ┃  │4│  │7│  │3│
 89   89  └─┘  ┃    9  └─┘   89  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐            ┃  ┌─┐  ┌─┐       ┃       ┌─┐  ┌─┐
│2│  4 6    6  ┃  │7│  │3│    6  ┃    6  │1│  │5│
└─┘   89   89  ┃  └─┘  └─┘   89  ┃   8   └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃                 ┃  ┌─┐          
│7│  │3│  │1│  ┃  4 6  456   56  ┃  │2│    6    6
└─┘  └─┘  └─┘  ┃    9   89   89  ┃  └─┘   89    9
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
      2    2   ┃   2   ┌─┐   2   ┃  ┌─┐  ┌─┐   2 
45   4 6    6  ┃  4 6  │7│   56  ┃  │1│  │3│    6
 89   89   89  ┃    9  └─┘    9  ┃  └─┘  └─┘     
               ┃                 ┃               
  3  ┌─┐   23  ┃   2        ┌─┐  ┃  ┌─┐       ┌─┐
45   │7│    6  ┃  4 6  456  │1│  ┃  │9│  456  │8│
     └─┘       ┃            └─┘  ┃  └─┘       └─┘
               ┃                 ┃               
1    12    2   ┃  ┌─┐       ┌─┐  ┃             2 
45   4 6    6  ┃  │8│  456  │3│  ┃   56  456    6
  9    9    9  ┃  └─┘    9  └─┘  ┃  7         7  "
`;

exports[`ruleOnlyCellCanBeValue: tough board stuck 1`] = `
"  3   2    23  ┃  ┌─┐  ┌─┐  ┌─┐  ┃               
               ┃  │1│  │6│  │4│  ┃   5    5      
 89   89   89  ┃  └─┘  └─┘  └─┘  ┃  78    89  7 9
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐            ┃  ┌─┐  ┌─┐  ┌─┐
│6│  │1│  │7│  ┃  │5│            ┃  │3│  │2│  │4│
└─┘  └─┘  └─┘  ┃  └─┘   89   89  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
     ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃            ┌─┐
     │5│  │4│  ┃  │3│  │2│  │7│  ┃    6    6  │1│
 89  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃   8    89  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
          ┌─┐  ┃   2   ┌─┐   2   ┃  ┌─┐  ┌─┐  ┌─┐
       6  │5│  ┃    6  │1│    6  ┃  │4│  │7│  │3│
 89   89  └─┘  ┃    9  └─┘   89  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐       ┃  ┌─┐  ┌─┐       ┃       ┌─┐  ┌─┐
│2│  │4│    6  ┃  │7│  │3│    6  ┃    6  │1│  │5│
└─┘  └─┘   89  ┃  └─┘  └─┘   89  ┃   8   └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃                 ┃  ┌─┐          
│7│  │3│  │1│  ┃  4 6  45    56  ┃  │2│    6    6
└─┘  └─┘  └─┘  ┃    9   89   89  ┃  └─┘   89    9
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
      2    2   ┃   2   ┌─┐   2   ┃  ┌─┐  ┌─┐   2 
45     6    6  ┃  4 6  │7│   56  ┃  │1│  │3│    6
 89   89   89  ┃    9  └─┘    9  ┃  └─┘  └─┘     
               ┃                 ┃               
  3  ┌─┐   23  ┃   2        ┌─┐  ┃  ┌─┐       ┌─┐
45   │7│    6  ┃  4 6  45   │1│  ┃  │9│  456  │8│
     └─┘       ┃            └─┘  ┃  └─┘       └─┘
               ┃                 ┃               
┌─┐   2    2   ┃  ┌─┐       ┌─┐  ┃             2 
│1│    6    6  ┃  │8│  45   │3│  ┃   56  456    6
└─┘    9    9  ┃  └─┘    9  └─┘  ┃  7         7  "
`;

exports[`ruleValueMustBeInRowOrColumnOfRegion 1`] = `
"1    ┌─┐  ┌─┐  ┃  1    1    1    ┃  1    1    1  
4    │2│  │3│  ┃  456  456  456  ┃  456  456  456
7    └─┘  └─┘  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
1    ┌─┐  ┌─┐  ┃  123  123  123  ┃  123  123  123
4    │5│  │6│  ┃  4    4    4    ┃  4    4    4  
7    └─┘  └─┘  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
1    ┌─┐  ┌─┐  ┃  123  123  123  ┃  123  123  123
4    │8│  │9│  ┃  456  456  456  ┃  456  456  456
7    └─┘  └─┘  ┃  7    7    7    ┃  7    7    7  
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
 56  4 6  45   ┃  456  456  456  ┃  456  456  456
 89  7 9  78   ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
 56  4 6  45   ┃  456  456  456  ┃  456  456  456
 89  7 9  78   ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
 56  4 6  45   ┃  456  456  456  ┃  456  456  456
 89  7 9  78   ┃  789  789  789  ┃  789  789  789
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
 56  4 6  45   ┃  456  456  456  ┃  456  456  456
 89  7 9  78   ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
 56  4 6  45   ┃  456  456  456  ┃  456  456  456
 89  7 9  78   ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
 56  4 6  45   ┃  456  456  456  ┃  456  456  456
 89  7 9  78   ┃  789  789  789  ┃  789  789  789"
`;

exports[`run() can beat tough difficulty level by combining rules: complete board 1`] = `
"┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│2│  │9│  │5│  ┃  │4│  │7│  │6│  ┃  │1│  │8│  │3│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│8│  │6│  │1│  ┃  │3│  │2│  │5│  ┃  │7│  │9│  │4│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│4│  │7│  │3│  ┃  │1│  │8│  │9│  ┃  │5│  │2│  │6│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│3│  │1│  │7│  ┃  │9│  │4│  │8│  ┃  │2│  │6│  │5│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│5│  │2│  │8│  ┃  │7│  │6│  │3│  ┃  │9│  │4│  │1│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│9│  │4│  │6│  ┃  │2│  │5│  │1│  ┃  │8│  │3│  │7│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│7│  │5│  │4│  ┃  │8│  │3│  │2│  ┃  │6│  │1│  │9│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│1│  │3│  │2│  ┃  │6│  │9│  │7│  ┃  │4│  │5│  │8│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│6│  │8│  │9│  ┃  │5│  │1│  │4│  ┃  │3│  │7│  │2│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘"
`;

exports[`run() can beat tough difficulty level by combining rules: gets stuck with just rule 1 1`] = `
" 2   ┌─┐   2   ┃   2    2        ┃  1    12   ┌─┐
45   │9│  45   ┃  456  45   456  ┃   56   56  │3│
78   └─┘       ┃       7    7    ┃  7     8   └─┘
               ┃                 ┃               
 23   2   ┌─┐  ┃   23   2        ┃       ┌─┐  ┌─┐
 5    56  │1│  ┃   56   5    56  ┃   56  │9│  │4│
78   78   └─┘  ┃       7    7    ┃  7    └─┘  └─┘
               ┃                 ┃               
 23   2    23  ┃  ┌─┐  ┌─┐  ┌─┐  ┃        2    2 
45   456  45   ┃  │1│  │8│  │9│  ┃   56   56   56
7    7         ┃  └─┘  └─┘  └─┘  ┃  7         7  
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
  3  1    ┌─┐  ┃  ┌─┐            ┃  ┌─┐  1 3  1  
45   45   │7│  ┃  │9│  45   45   ┃  │2│  456   56
          └─┘  ┃  └─┘        8   ┃  └─┘          
               ┃                 ┃               
 2   12   ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  1    1  
45   45   │8│  ┃  │7│  │6│  │3│  ┃  │9│  45    5 
          └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘          
               ┃                 ┃               
 23   2   ┌─┐  ┃   2    2   ┌─┐  ┃  ┌─┐    3     
45   45   │6│  ┃  45   45   │1│  ┃  │8│  45    5 
  9       └─┘  ┃            └─┘  ┃  └─┘       7  
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
               ┃  ┌─┐  ┌─┐  ┌─┐  ┃  1    1    1  
45   45   45   ┃  │8│  │3│  │2│  ┃   56   56   56
7 9  7      9  ┃  └─┘  └─┘  └─┘  ┃              9
               ┃                 ┃               
┌─┐  ┌─┐   2   ┃                 ┃  ┌─┐   2    2 
│1│  │3│   5   ┃   56   5    56  ┃  │4│   56   56
└─┘  └─┘    9  ┃       7 9  7    ┃  └─┘   8    89
               ┃                 ┃               
┌─┐   2    2   ┃       1         ┃  1 3  ┌─┐  12 
│6│  45   45   ┃  45   45   45   ┃   5   │7│   5 
└─┘   8     9  ┃         9       ┃       └─┘   89"
`;

exports[`run() can beat tough difficulty level by combining rules: gets stuck with just rule 2 1`] = `
" 2   ┌─┐   2   ┃   2    2   ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
45   │9│  45   ┃  4    4    │6│  ┃  │1│  │8│  │3│
7    └─┘       ┃       7    └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐   2   ┌─┐  ┃  ┌─┐   2   ┌─┐  ┃       ┌─┐  ┌─┐
│8│    6  │1│  ┃  │3│       │5│  ┃    6  │9│  │4│
└─┘  7    └─┘  ┃  └─┘  7    └─┘  ┃  7    └─┘  └─┘
               ┃                 ┃               
 2    2   ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃        2    2 
45   456  │3│  ┃  │1│  │8│  │9│  ┃   56   56   56
7    7    └─┘  ┃  └─┘  └─┘  └─┘  ┃  7            
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  1    ┌─┐  ┃  ┌─┐       ┌─┐  ┃  ┌─┐  1    1  
│3│  45   │7│  ┃  │9│  45   │8│  ┃  │2│  456   56
└─┘       └─┘  ┃  └─┘       └─┘  ┃  └─┘          
               ┃                 ┃               
 2   12   ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  1    1  
45   45   │8│  ┃  │7│  │6│  │3│  ┃  │9│  45    5 
          └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘          
               ┃                 ┃               
┌─┐   2   ┌─┐  ┃   2    2   ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│9│  45   │6│  ┃  4    45   │1│  ┃  │8│  │3│  │7│
└─┘       └─┘  ┃            └─┘  ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
               ┃  ┌─┐  ┌─┐  ┌─┐  ┃       1    1  
45   45   45   ┃  │8│  │3│  │2│  ┃   56   56   56
7    7      9  ┃  └─┘  └─┘  └─┘  ┃              9
               ┃                 ┃               
┌─┐  ┌─┐   2   ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐   2   ┌─┐
│1│  │3│   5   ┃  │6│  │9│  │7│  ┃  │4│   5   │8│
└─┘  └─┘       ┃  └─┘  └─┘  └─┘  ┃  └─┘       └─┘
               ┃                 ┃               
┌─┐  ┌─┐   2   ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐   2 
│6│  │8│       ┃  │5│  │1│  │4│  ┃  │3│  │7│     
└─┘  └─┘    9  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘    9"
`;

exports[`run() does its best on a master difficulty level: master board stuck 1`] = `
"      2   ┌─┐  ┃   23   23   2   ┃  ┌─┐   23  ┌─┐
 5        │4│  ┃    6   56   56  ┃  │7│    6  │1│
  9    9  └─┘  ┃   8    8    8   ┃  └─┘       └─┘
               ┃                 ┃               
      2   ┌─┐  ┃   23   23  ┌─┐  ┃  ┌─┐   23  ┌─┐
 5        │6│  ┃  4    45   │1│  ┃  │9│  4    │8│
7    7    └─┘  ┃            └─┘  ┃  └─┘       └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐   2    2   ┃   2   ┌─┐   2 
│8│  │3│  │1│  ┃  │7│  4 6    6  ┃    6  │5│  4 6
└─┘  └─┘  └─┘  ┃  └─┘    9    9  ┃       └─┘     
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐            ┃   23   2    23
│4│  │5│  │7│  ┃  │1│            ┃    6    6    6
└─┘  └─┘  └─┘  ┃  └─┘   89   89  ┃               
               ┃                 ┃               
┌─┐         3  ┃  ┌─┐    3  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│2│    6       ┃  │5│    6  │7│  ┃  │4│  │1│  │9│
└─┘   8    8   ┃  └─┘       └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
1 3  1      3  ┃   23   23  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
       6       ┃    6    6  │4│  ┃  │8│  │7│  │5│
  9    9    9  ┃            └─┘  ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
1    ┌─┐       ┃   2   12   ┌─┐  ┃   2   ┌─┐  ┌─┐
     │4│   5   ┃    6   56  │3│  ┃   56  │8│  │7│
  9  └─┘    9  ┃            └─┘  ┃       └─┘  └─┘
               ┃                 ┃               
  3       ┌─┐  ┃  ┌─┐            ┃  ┌─┐         3
          │2│  ┃  │9│  456   56  ┃  │1│  4 6  4 6
7    78   └─┘  ┃  └─┘  78    8   ┃  └─┘          
               ┃                 ┃               
┌─┐  1      3  ┃   2   12    2   ┃   23  ┌─┐   23
│6│        5   ┃  4    45    5   ┃   5   │9│  4  
└─┘  78    8   ┃   8   78    8   ┃       └─┘     "
`;

exports[`run() does its best on an expert difficulty level: expert board stuck 1`] = `
"┌─┐    3  ┌─┐  ┃  123  1    123  ┃  1    ┌─┐   23
│9│  4    │6│  ┃  45   4     5   ┃  4    │8│  4  
└─┘  7    └─┘  ┃                 ┃       └─┘  7  
               ┃                 ┃               
┌─┐    3  ┌─┐  ┃   23  ┌─┐  ┌─┐  ┃  ┌─┐   23   23
│5│  4    │1│  ┃  4 6  │7│  │8│  ┃  │9│  4 6  4 6
└─┘       └─┘  ┃       └─┘  └─┘  ┃  └─┘          
               ┃                 ┃               
  3  ┌─┐    3  ┃  1 3  1    ┌─┐  ┃  1    1 3  ┌─┐
     │2│  4    ┃  4 6  4 6  │9│  ┃  4 6  4 6  │5│
78   └─┘  78   ┃            └─┘  ┃       7    └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  1 3  ┌─┐  ┃  ┌─┐  ┌─┐  1    ┃  1    1 3    3
│4│       │2│  ┃  │9│  │5│    6  ┃    6    6    6
└─┘  78   └─┘  ┃  └─┘  └─┘       ┃   8   7    7  
               ┃                 ┃               
     1    ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  1       
  6   5   │9│  ┃  │8│  │3│  │4│  ┃  │2│   56    6
7    7    └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  7    7  
               ┃                 ┃               
  3  1 3    3  ┃  1    ┌─┐  ┌─┐  ┃  1    1 3  ┌─┐
  6   5    5   ┃    6  │2│  │7│  ┃  456  456  │9│
 8    8    8   ┃       └─┘  └─┘  ┃   8        └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐    3    3  ┃  ┌─┐        23  ┃       ┌─┐   2 
│1│  45   45   ┃  │7│  4 6   56  ┃  456  │9│  4 6
└─┘   8    8   ┃  └─┘            ┃       └─┘     
               ┃                 ┃               
 2   ┌─┐       ┃   2   ┌─┐   2   ┃  ┌─┐   2   ┌─┐
     │9│  45   ┃  456  │8│   56  ┃  │3│  456  │1│
7    └─┘  7    ┃       └─┘       ┃  └─┘       └─┘
               ┃                 ┃               
 23  ┌─┐    3  ┃  123  ┌─┐  123  ┃  ┌─┐   2   ┌─┐
     │6│  45   ┃  45   │9│   5   ┃  │7│  45   │8│
     └─┘       ┃       └─┘       ┃  └─┘       └─┘"
`;
